--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h3 class="places__title">Кольский</h3>
                 <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="places__website">National Geographic</a>
                 <img src="./images/places/places__image-2.png" alt="Изображение" class="places__image">
-                <div class="place__description">
+                <div class="places__description">
                     <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                     <p class="places__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
                 </div>
@@ -76,7 +76,7 @@
                 <h3 class="places__title">Алтай</h3>
                 <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="places__website">Facebook</a>
                 <img src="./images/places/places__image-3.png" alt="Изображение" class="places__image">
-                <div class="place__description">
+                <div class="places__description">
                     <p class="places__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
                     <p class="places__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
                 </div>
@@ -85,7 +85,7 @@
                 <h3 class="places__title">Зимний Байкал</h3>
                 <a href="https://vk.com/baikalmile" target="_blank" class="places__website">https://vk.com/baikalmile</a>
                 <img src="./images/places/places__image-4.png" alt="Изображение" class="places__image">
-                <div class="place__description">
+                <div class="places__description">
                     <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
                 </div>
@@ -94,18 +94,19 @@
                 <h3 class="places__title">Карелия</h3>
                 <a href="http://vodlozero.ru" target="_blank" class="places__website">http://vodlozero.ru/</a>
                 <img src="./images/places/places__image-5.png" alt="Изображение" class="places__image">
-                <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь  к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
+            
         </section>
 
-        <div class="baikal">
+       <!--  <div class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
                 <h3 class="baikal__title">До Байкала «на собаках»</h3>
                 <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
             </a>
         </div>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <ul class="footer__list">
                 <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
                 <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
