--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="page">
         <header class="header">
-            <img src="./images/__logo.png" alt="Изображение" class="header__logo">
+            <img src="./images/__logo.svg" alt="Изображение" class="header__logo">
             <div class="header__links">
                 <a href="#" class="header__lang-link">RU</a>
                 <a href="#" class="header__lang-link">EN</a>
@@ -56,7 +56,26 @@
         <section class="places">
             <div class="places__item">
                 <h3 class="places__title">Куршская коса</h3>
-                <a href="http://park-kosa.ru" target="_blank" class="places__website">park-kosa.ru</a>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="www.google.com" class="places__website">GOOGLE</a>
+                </div>
+                <img src="./images/places/places__image-1.png" alt="Куршская коса" class="places__image">
+                <div class="places__description">
+                    <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
+                    <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- <section class="places">
+            <div class="places__item">
+                <h3 class="places__title">Куршская коса</h3>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="http://park-kosa.ru" target="_blank" class="places__website">park-kosa.ru</a>
+                </div>
                 <img src="./images/places/places__image-1.png" alt="Изображение" class="places__image">
                 <div class="places__description">
                     <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -65,7 +84,10 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Кольский</h3>
-                <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="places__website">National Geographic</a>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank" class="places__website">National Geographic</a>
+                </div>
                 <img src="./images/places/places__image-2.png" alt="Изображение" class="places__image">
                 <div class="places__description">
                     <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -74,7 +96,10 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Алтай</h3>
-                <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="places__website">Facebook</a>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank" class="places__website">Facebook</a>
+                </div>
                 <img src="./images/places/places__image-3.png" alt="Изображение" class="places__image">
                 <div class="places__description">
                     <p class="places__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -83,7 +108,10 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Зимний Байкал</h3>
-                <a href="https://vk.com/baikalmile" target="_blank" class="places__website">https://vk.com/baikalmile</a>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="https://vk.com/baikalmile" target="_blank" class="places__website">https://vk.com/baikalmile</a>
+                </div>
                 <img src="./images/places/places__image-4.png" alt="Изображение" class="places__image">
                 <div class="places__description">
                     <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -92,13 +120,16 @@
             </div>
             <div class="places__item">
                 <h3 class="places__title">Карелия</h3>
-                <a href="http://vodlozero.ru" target="_blank" class="places__website">http://vodlozero.ru/</a>
+                <div class="places__website-block">
+                    <p class="places__url">URL</p>
+                    <a href="http://vodlozero.ru" target="_blank" class="places__website">http://vodlozero.ru/</a>
+                </div>
                 <img src="./images/places/places__image-5.png" alt="Изображение" class="places__image">
                 <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
-        </section>
+        </section> -->
 
-       <div class="baikal">
+       <!-- <div class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
                 <h3 class="baikal__title">До Байкала «на собаках»</h3>
                 <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
@@ -114,7 +145,7 @@
                 <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
                 <li class="footer__item">© 2022. Башкирова Анастасия</li>
             </ul>
-        </footer>
+        </footer> -->
 
     </div>
 </body>
