--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <img src="./images/photo-grid/photo-grid__item-12.png" alt="Изображение" class="photo-grid__item">
         </div>
         
-        <section class="places">
+        <!-- <section class="places">
             <div class="places__item">
                 <h3 class="places__title">Куршская коса</h3>
                 <div class="places__website-block">
@@ -66,10 +66,10 @@
                     <p class="places__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
-        <!-- <section class="places">
+        <section class="places">
             <div class="places__item">
                 <h3 class="places__title">Куршская коса</h3>
                 <div class="places__website-block">
@@ -125,9 +125,9 @@
                     <a href="http://vodlozero.ru" target="_blank" class="places__website">http://vodlozero.ru/</a>
                 </div>
                 <img src="./images/places/places__image-5.png" alt="Изображение" class="places__image">
-                <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                <p class="places__description">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
-        </section> -->
+        </section>
 
        <!-- <div class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
