--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <a href="http://vodlozero.ru" target="_blank" class="places__website">http://vodlozero.ru/</a>
                 </div>
                 <img src="./images/places/places__image-5.png" alt="Изображение" class="places__image">
-                <p class="places__description">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
         </section>
 
@@ -123,7 +123,7 @@
             </a>
         </div>
 
-        <!-- <footer class="footer">
+        <footer class="footer">
             <ul class="footer__list">
                 <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
                 <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
@@ -132,7 +132,7 @@
                 <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
                 <li class="footer__item">© 2022. Башкирова Анастасия</li>
             </ul>
-        </footer> -->
+        </footer>
 
     </div>
 </body>
