--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
-    <div class="page">
+    <main class="page">
         <header class="header">
             <img src="./images/__logo.svg" alt="Изображение" class="header__logo">
             <div class="header__links">
-                <a href="#" class="header__lang-link">RU</a>
-                <a href="#" class="header__lang-link">EN</a>
+                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+                <a href="#" class="header__lang-link">En</a>
             </div>
         </header>
 
@@ -23,22 +23,21 @@
             <div class="lead__image-block">
                 <img src="./images/__image.png" alt="Изображение" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
-            </div>            
+            </div>  
+            <div class="intro">
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+                <ul class="intro__list">
+                    <li class="intro__list-item"><span class="intro__list-text">Часовых поясов</span> 11</li>
+                    <li class="intro__list-item"><span class="intro__list-text">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li class="intro__list-item"><span class="intro__list-text">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li class="intro__list-item"><span class="intro__list-text">Природных заповедников</span> 105</li>
+                    <li class="intro__list-item"><span class="intro__list-text">Аэропортов</span> 241</li>
+                </ul>
+            </div>          
         </section>
 
-        <div class="intro">
-            <p class="intro__title">Чего мы там не видели?</p>
-            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-            <ul class="intro__list">
-                <li class="intro__list-item">Часовых поясов 11</li>
-                <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
-                <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
-                <li class="intro__list-item">Природных заповедников 105</li>
-                <li class="intro__list-item">Аэропортов 241</li>
-            </ul>
-        </div>
-
-        <div class="photo-grid">
+        <section class="photo-grid">
             <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-2.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-3.png" alt="Изображение" class="photo-grid__item">
@@ -51,7 +50,7 @@
             <img src="./images/photo-grid/photo-grid__item-10.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-11.png" alt="Изображение" class="photo-grid__item">
             <img src="./images/photo-grid/photo-grid__item-12.png" alt="Изображение" class="photo-grid__item">
-        </div>
+        </section>
 
         <section class="places">
             <div class="places__item">
@@ -113,26 +112,28 @@
             </div>
         </section>
 
-       <div class="baikal">
+       <section class="baikal">
             <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="baikal__link">
                 <div class="baikal__text-block">
-                    <h3 class="baikal__title">До Байкала «на собаках»</h3>
-                    <h4 class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h4>
+                    <h2 class="baikal__title">До Байкала «на собаках»</h2>
+                    <p class="baikal__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                  </div>
                 <img src="./images/cover-trains.jpg" alt="Байкал" class="baikal__image">
             </a>
-        </div>
-
+        </section>
+        
         <footer class="footer">
-            <ul class="footer__list">
-                <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-                <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-                <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-                <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-                <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
-            </ul>
+            <nav class="footer__navigation">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                    <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                    <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                    <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                    <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                </ul>
+            </nav>  
             <p class="footer__copyright">© 2022. Башкирова Анастасия</p>
         </footer>
-    </div>
+    </main>
 </body>
 </html>
