--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Путешествия по России</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="content">
+    <header class="header">
+        <img src="./images/__logo.svg" alt="Изображение" class="header__logo">
+        <div class="header__links">
+            <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+            <a href="#" class="header__lang-link">En</a>
+        </div>
+    </header>
     <main class="page">
-        <header class="header">
-            <img src="./images/__logo.svg" alt="Изображение" class="header__logo">
-            <div class="header__links">
-                <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
-                <a href="#" class="header__lang-link">En</a>
-            </div>
-        </header>
-
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -26,7 +25,7 @@
             </div>  
         </section>
 
-        <div class="intro">
+        <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
             <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
             <ul class="intro__list">
@@ -36,7 +35,7 @@
                 <li class="intro__list-item"><span class="intro__list-text">Природных заповедников</span> 105</li>
                 <li class="intro__list-item"><span class="intro__list-text">Аэропортов</span> 241</li>
             </ul>
-        </div>
+        </section>
 
         <section class="photo-grid">
             <img src="./images/photo-grid/photo-grid__item-1.png" alt="Изображение" class="photo-grid__item">
